[tool.poetry]
name = "essembeh-tools"
version = "0.4.2"
description = "Collection of command line tools written in Python"
homepage = "https://github.com/essembeh/essembeh-tools"
authors = ["Sébastien MB <seb@essembeh.org>"]
license = "Apache-2.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Utilities"
]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.5"
shellingham = "^1.5.0.post1"
pexpect = "^4.8.0"
pillow = "^10.2.0"
ffmpeg-python = "^0.2.0"
tqdm = "^4.66.1"
lazy-object-proxy = "^1.10.0"
jsonpath-ng = "^1.6.1"
python-magic = "^0.4.27"


[tool.poetry.dev-dependencies]
black = "^22.8.0"
pylint = "^2.15.3"
pytest = "^7.1.3"
pytest-dotenv = "^0.5.2"
pytest-cov = "^3.0.0"


[tool.poetry.scripts]
#helloworld = "essembeh_tools.cli.helloworld:run"
age-source = "essembeh_tools.cli.age_source:run"
batxaran = "essembeh_tools.cli.batxaran:run"
date-renamer = "essembeh_tools.cli.date_renamer:run"
dispatch = "essembeh_tools.cli.dispatch:run"
ezfuse = "essembeh_tools.cli.ezfuse:run"
hrenamer = "essembeh_tools.cli.hrenamer:run"
pyfdupes = "essembeh_tools.cli.pyfdupes:run"
remote-borg = "essembeh_tools.cli.remote_borg:run"
virenamer = "essembeh_tools.cli.virenamer:run"
video-to-images = "essembeh_tools.cli.video_to_images:run"
images-to-video = "essembeh_tools.cli.images_to_video:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
